# scorecards

./: .coveragerc  .editorconfig  .eslintrc.json  .gitignore  .shellcheckrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HYBRID_AUTH_PLAN.md  LICENSE  PHASE-8-CLEANUP-PLAN.md  PHASE1_USER_DOCS.md  PHASE2_DEVELOPER_DOCS.md  PHASE3_ENHANCEMENTS.md  README.md  REFACTOR_PHASE_5B_EXECUTION_PLAN.md  SECURITY.md  SYSTEM_OVERVIEW.md  all-checks.json  current-checks-hash.txt  current-checks.json  jest.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements-dev.txt  todo.md  tsconfig.json
.claude/: context.md
action/: Dockerfile  action.yml  config-template.yml  entrypoint.sh  package.json
badges/: README.md
catalog/: README.md
docs/: CHECKS.md  CONFIG.md  README.md  USAGE.md  api-explorer.html  app.js  getting-started.md  index.html  styles.css  vite.config.ts
documentation/: README.md  comparison.md  getting-started.md
migration-plan/: 00-overview.md  10-teams-cleanup.md  10-view-container-migration.md  11-actions-widget.md  12-window-globals-elimination.md  12-window-globals.md  13-bootstrap-simplification.md  README.md
refactoring/: README.md  phase-1-configuration-eslint.md  phase-2-bash-hardening.md  phase-3-jq-extraction.md  phase-4-jsdoc-types.md  phase-5-ui-modularization.md  phase-6-state-python-tests.md
registry/: README.md  all-services.json  services.json
results/: README.md
scripts/: install-test-deps.sh  install.sh  reset-catalog.sh
teams/: all-teams.json  backend.json  (+2 more)
(+634 files in other folders)
